<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Enem</string>
    <string name="btPort">Português</string>
    <string name="btMat">Matemática</string>
    <string name="btNat">Ciências da Natureza</string>
    <string name="btHum">Ciências Humanas</string>
    <!--TODO colocar isso como translation-->
    <string name="Act">Atividades</string>
    <string name="tbDesem">Desempenho</string>
    <string name="tbCalend">Calendário</string>
    <string name="btVoltar">Voltar</string>
    <string name="title_activity_tela_diciplina_calendario" translatable="false">tela_diciplina_calendario</string>
    <string name="nav_calender">Calendario</string>
    <string name="nav_list_ativ">listar atividades</string>
    <string name="nav_add_alarme">Adcionar Alarme</string>
    <string name="nome_alarme">Nome da Atividade</string>
    <string name="add_atividade">Adicionar Atividades</string>
    <string name="hora">HORA</string>
    <string name="lembrar_antes">Lembrar Antes</string>
    <string name="ten">10 min</string>
    <string name="vint">20 min</string>
    <string name="trinta">30 min</string>
    <string name="date">Data</string>
    <string name="salvar">Salvar</string>
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
    <string name="alertTitle">Erro no Login</string>
    <string name="alertMessage">Senha ou Nome inválido!</string>
    <string name="alertMessage2">Preencha todos os campos</string>
</resources>
