<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:fitsSystemWindows="false">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="384dp"
                android:layout_height="214dp" android:id="@+id/imageView4"
                android:background="@drawable/enem" android:contentDescription="@android:string/untitled"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="58dp" android:id="@+id/btPort"
                tools:text="Português" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/btHumanas" android:text="@string/btPort"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="64dp" android:id="@+id/btHumanas"
                style="@style/Widget.AppCompat.Button.Colored" tools:text="Ciências Humanas"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" android:text="@string/btHum"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/btNatu" tools:text="Ciências da Natureza"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/btMat" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:text="@string/btNat"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="56dp" android:id="@+id/btMat"
                tools:text="Matemática" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/btPort" android:text="@string/btMat"/>
    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>